welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:30: error: ')' expected but 'else' found.
  } else {
    ^